--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,6 +44,10 @@ li {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 /***** header *****/
 header {
     background-color: var(--section-bg-1);
@@ -137,6 +141,7 @@ input:focus {
     display: flex;
     align-items: center;
     position: relative;
+    padding: 50px 0px 50px 0px;
 }
 
 #banner-section::before {
@@ -202,9 +207,8 @@ input:focus {
 #banner-section .right-text li {
     list-style: none;
     color: white;
-    padding: 6px;
-
-    font-size: 17px;
+    padding: 3px;
+    font-size: 16px;
 }
 
 #banner-section .left-side-style .GET {
@@ -303,11 +307,100 @@ input:focus {
 
 /***** End banner *****/
 
+/***** learn-about *****/
+.learn-about {
+    padding: 50px 0px 50px 0px;
+    background-color: #F8F8F8;
+}
+
+.learn-about .learn-more {
+    font-size: 30px;
+    text-align: center;
+    font-weight: 600;
+    color: var(--text-color);
+
+}
+
+.learn-about .Get-a {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 30px;
+}
+
+.learn-about .HOUR {
+    text-align: center;
+    line-height: 10px;
+    font-size: 16px;
+}
+
+.learn-about .number {
+    color: var(--text-color);
+}
+
+.learn-about .img {
+    overflow: hidden;
+    margin-top: 35px;
+    border-radius: 10px;
+
+}
+
+.learn-about .img img {
+    width: 100%;
+    border-radius: 10px;
+    transition: 0.3s;
+    border: 1px solid #eee;
+}
+
+.learn-about .img img:hover {
+
+    transform: scale(1.1);
+}
+
+.learn-about .text {
+    margin-top: 35px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.learn-about .Hire {
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 35px;
+    padding-bottom: 15px;
+    /* text-align: center; */
+
+}
+
+.learn-about .We-install {
+    /* text-align: center; */
+    color: var(--p-color);
+    padding-top: 2px;
+    font-size: 17px;
+    line-height: 26px;
+
+}
+
+.learn-about .Learn {
+    margin-top: 7px;
+    width: 100%;
+    width: max-content;
+    padding: 10px 29px;
+    border: none;
+    background-color: var(--section--bg-2);
+    color: white;
+    outline: none;
+    font-size: 17px;
+    text-transform: capitalize;
+    letter-spacing: 1 px;
+}
+
+/***** End learn-about *****/
+
 
 /***** about us  *****/
 #about-us {
     padding: 50px 0px 50px 0px;
-    background-color: #F8F8F8;
 
 }
 
@@ -357,9 +450,65 @@ input:focus {
 
 /***** End about us  *****/
 
+/***** commercial-cards *****/
+.commercial-cards {
+    padding: 50px 0px 50px 0px;
+    background-color: #F8F8F8;
+
+}
+
+.commercial-cards .cards-style {
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 40px;
+    transition: 0.3s;
+    overflow: hidden;
+    position: relative;
+}
+.commercial-cards .cards-style::before{
+    position: absolute;
+    content: '';
+    height: 6px;
+    width: 0%;
+    background-color: var(--section--bg-2);
+    bottom: 0%;
+    left: 50%;
+    transition: 0.3s;
+}
+.commercial-cards .cards-style:hover::before{
+    width: 100%;
+    left: 0%;
+    background-color: var(--section--bg-2);
+}
+
+.commercial-cards .cards-style:hover {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+}
+
+.commercial-cards .cards-style .text p {
+    font-size: 15px;
+    line-height: 24px;
+    padding-top: 1px;
+    padding-top: 20px;
+    color: var(--p-color);
+
+}
+
+/***** End commercial-cards *****/
+
 /***** s-cards *****/
 .s-cards {
     padding: 50px 0px 75px 0px;
+}
+
+.s-cards .provide {
+    font-size: 30px;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: 700;
+    color: var(--text-color);
 }
 
 .s-cards .card-syle {
